--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "npm run build -w @afinco2/core && npm run build -w @afinco2/api",
     "format": "prettier --write",
     "lint:staged": "lint-staged",
-    "prepare": "husky install && npm run build -w @afinco2/core"
+    "prepare": "husky install && npm run build -w @afinco2/core",
+    "commitlint": "commitlint --edit"
   },
   "keywords": [],
   "author": "André Martins <fmartins.andre@gmail.com>",
@@ -18,6 +19,8 @@
     "apps/api"
   ],
   "devDependencies": {
+    "@commitlint/cli": "^17.7.2",
+    "@commitlint/config-conventional": "^17.7.0",
     "husky": "^8.0.0",
     "lint-staged": "^14.0.1",
     "prettier": "^3.0.3",
@@ -34,6 +37,11 @@
     "apps/api/**/*.{js,ts}": [
       "npm run format -w @afinco2/api",
       "npm run lint -w @afinco2/api"
+    ]
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
     ]
   }
 }
